. r quickfixes from IDE